# libSLIPStream

./: .gitignore  .pioignore  CMakeLists.txt  FramingConvention.md  IMPLEMENTATION_SUMMARY.md  PYTHON_QUICKSTART.md  README.md  idf_component.yml  library.json  platformio.ini
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_buffer.cpp  bench_crc32.cpp  bench_decoder.cpp  bench_encoder.cpp  bench_main.cpp
examples/: example_01_basic_encoding.cpp
include/SLIPStream/: Buffer.hpp  CRC32.hpp  Decoder.hpp  Encoder.hpp  Error.hpp  SLIP.hpp  SLIPBuffer.hpp  SLIPStream.hpp  SLIPStreamDecoder.hpp  SLIPStreamEncoder.hpp
python/: .coverage  README.md  pyproject.toml  requirements.txt  setup.py
python/examples/: 01_basic_encoding.py  02_crc32_validation.py  03_streaming_decoder.py  04_serial_monitor_demo.py  README.md  __init__.py
python/scripts/: monitor_slip.py
python/slipstream/: __init__.py  connections.py  crc.py  slip.py  stats.py  streaming.py
python/tests/: conftest.py  test_slipstream.py
src/: Buffer.cpp  CRC32.cpp  Decoder.cpp  Encoder.cpp  Error.cpp  SLIPBuffer.cpp  SLIPStream.cpp  SLIPStreamDecoder.cpp  SLIPStreamEncoder.cpp
test/: CMakeLists.txt  test_buffer_enhanced.cpp  test_comprehensive.cpp  test_crc32.cpp  test_data_files.cpp  test_decoder_enhanced.cpp  test_edge_cases.cpp  test_encoder_enhanced.cpp  test_error_system.cpp  test_slipbuffer.cpp  test_slipencoder.cpp
test/test_data/: README.md
