[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slipstream"
version = "1.0.0"
description = "Python library for SLIP frame monitoring and processing with CRC32 validation"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "See LICENSE file"}
authors = [
    {name = "Uli Köhler", email = "github@techoverflow.net"}
]
maintainers = [
    {name = "Uli Köhler", email = "github@techoverflow.net"}
]
keywords = [
    "slip",
    "serial",
    "framing",
    "crc32",
    "protocol",
    "monitoring",
    "networking"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Communications :: Serial",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ulikoehler/libSLIPStream"
Documentation = "https://github.com/ulikoehler/libSLIPStream/tree/master/python"
Repository = "https://github.com/ulikoehler/libSLIPStream"
Issues = "https://github.com/ulikoehler/libSLIPStream/issues"

[project.scripts]
monitor_slip = "scripts.monitor_slip:main"

[project.optional-dependencies]
serial = ["pyserial>=3.5"]
dev = ["pytest>=6.0", "pytest-cov>=2.10"]

[tool.setuptools]
packages = ["slipstream"]

[tool.setuptools.package-dir]
slipstream = "slipstream"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["slipstream"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
